30-Jul-2015 Laurent Duflot
	* SR, CRxx: add switch ON/OFF to fill RJigSaw variables


29-Jul-2015 Laurent Duflot
	* add data/PRW.mc15_13TeV.410000_r6765_r6282.root
	* zerolepton.config: point to 25ns reference file
	* PhysObjProxyUtils: fix memory leaks

29-Jul-2015 Geraldine Conti
	* launch_jobs_on_grid.py: use zeroleptontruth.config for TRUTH1,
	protection against DerivationTag to be set for TRUTH1
	* FilterUpdateMerge.py : added DB sample in AllSamples
	* makeDatasetList.py : fix for TRUTH1 samples (effic=1)

28-Jul-2015 Laurent Duflot
	* BuildSUSYObjects, ZeroLeptonCRx: propagate e/mu/photon SF

27-Jul-2015 Laurent Duflot
	* BuildSUSYObjects: rewrite using SUSYTools functions and include loop
	on systematics (from ZeroLeptonSystVariations)
	* ZeroLeptonSystVariations: remove creation of loop on systematics, now
	in BuildSUSYObjects, just loop over systematics published by BuildSUSYObjects
	* ZeroLeptonSR and CRs: adapt to changes above
	* zerolepton.config: support for systematics in BuildSUSYObjects
	* zerolepton_with_systematics.config: remove
	* ZerloLeptonNTVars: add "systWeights" events weights from systematics


27-Jul-2015 Laurent Duflot
	* ZeroLeptonCRY: fix 'cleaning' variable (last bit not filled)
	* ZeroLeptoCRWT, ZeroLeptonCRZ: set bit number avec if (truth)
	* BuildSUSYObjects.cxx: need to call explicitely IsBadJet after
	SUSYTools-00-01-14
	* tagged as ZeroLeptonRun2-00-00-45

23-Jul-2015 Laurent Duflot
	* ZeroLeptonSR, ZeroLeptonCRZ, ZeroLeptonCRWT: code cleanup
	* PhysObjProxyUtils, ZeroLeptonCRY, BuildTruthObjects, FilterUpdateMerge: code cleanup


22-Jul-2015 Laurent Duflot
	* FilterUpdateMerge.py, getMCInfo.py: add protections for signal samples
	* getMCInfo.py: better treatment of signal samples with derivation
	(still not 100% correct for complex sample with multiple processes)

20-Jul-2015 Laurent Duflot
	* python: add scripts to validate production: running on all files,
	look for duplicate events
	* INSTALL: new version of cafe
