@@ -1,5 +1,7 @@
 30-Jul-2015 Laurent Duflot
 	* SR, CRxx: add switch ON/OFF to fill RJigSaw variables
+	* ZeroLeptonNTVars, PhysObjProxyUtils, SR, CRxx: remove old calculation
+	of razor variables
 
 
 29-Jul-2015 Laurent Duflot
